[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bwatch-python"
version = "0.0.1"
authors = [
  { name="Bridgecard", email="contact@bridgecard.co" },
]
description = "Bwatch is an internal transaction monitoring service for fraudulent transactions in realtime."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/bwatch-python"
"Bug Tracker" = "https://github.com/pypa//bwatch-python/issues"
